# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: Pylint-action.yml  PythonCI.yml
gendiff/: __init__.py  cli.py  compare_data.py  find_differences.py  format_diff.py  gendiff.py  get_diff.py  parser.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
scripts/: gendiff.py
tests/: test_gendiff.py  tests_gendiff.py
tests/fixtures/: expected_result_json.txt  file4.yaml
