[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Alexey <yakor.alex@gmail.com>"]
readme = "README.md"
repository = "https://github.com/YAV88/python-project-50"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Free For Home Use",
    "Operating System :: Unix",
]
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
jsondiff = "^2.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"